--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,10 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBGYj2xq9qW7Gd7EB3Uh4Kt5CdZQTXkj38&callback=initMap"
+            type="text/javascript"></script>
+
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
