--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,7 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBGYj2xq9qW7Gd7EB3Uh4Kt5CdZQTXkj38&callback=initMap"
-            type="text/javascript"></script>
-
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDnrYwHjEHveHKdSPPx-5QwuNzr0B4MgrY"></script>
 
     <div id="root"></div>
     <!--
